Add endpoint for adding teachers to system
